# object-detection-demo

./: README.md  [project]object_detection_fall_2022.ipynb  app.py  predictor.py  pyproject.toml  requirements.txt
