[tool.poetry]
name = "detector-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "detector_demo"}]

[tool.poetry.dependencies]
python = ">=3.10, <=3.11"
ultralytics = "^8.0.18"
streamlit = "^1.17.0"
notebook = "^6.5.2"
jupyter-contrib-nbextensions = "^0.7.0"
opencv-python = "^4.7.0.68"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
